--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- custom css -->
-    <link rel="stylesheet" href="/common.css" />
+    <link rel="stylesheet" href="./common.css"/>
   </head>
   <body>
     <div class="wrapper">
